:bug:  Fix: MemberConverter 수정